@@ -1,3 +1,7 @@
+2022-12-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/docker.yaml (jobs): Update several actions
+
 2022-12-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/stale.yaml (jobs): Update actions/stale@v6
